// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`global world queries > should add world invalidation checks 1`] = `
"-- Compiled with roblox-ts v3.0.0
local TS = _G[script]
local _ecs = TS.import(script, script.Parent, "ecs")
local A = _ecs.A
local B = _ecs.B
local C = _ecs.C
local world = _ecs.world
local query_1 = world:query(A, B, C):cached()
local archetypes_1 = query_1:archetypes()
local query_2 = world:query(A, B):cached()
local archetypes_2 = query_2:archetypes()
local function system0()
	for _, archetype_1 in archetypes_1 do
		local entities_1 = archetype_1.entities
		for row_1 = #entities_1, 1, -1 or 1 do
			local e1 = entities_1[row_1]
			do
				for _1, archetype_2 in archetypes_2 do
					local entities_2 = archetype_2.entities
					for row_2 = #entities_2, 1, -1 or 1 do
						local e2 = entities_2[row_2]
						do
						end
					end
				end
			end
		end
	end
end
return {
	system0 = system0,
}
"
`;

exports[`global world queries > should be able to use a component with an unnameable type 1`] = `
"-- Compiled with roblox-ts v3.0.0
local TS = _G[script]
local _ecs = TS.import(script, script.Parent, "ecs")
local D = _ecs.D
local world = _ecs.world
local query_1 = world:query(D):cached()
local archetypes_1 = query_1:archetypes()
local function system0()
	for _, archetype_1 in archetypes_1 do
		local entities_1 = archetype_1.entities
		local field_1 = archetype_1.columns_map
		local D_1 = field_1[D]
		for row_1 = #entities_1, 1, -1 or 1 do
			local e = entities_1[row_1]
			local d = D_1[row_1]
			do
			end
		end
	end
end
return {
	system0 = system0,
}
"
`;

exports[`global world queries > should be able to use pairs 1`] = `
"-- Compiled with roblox-ts v3.0.0
local TS = _G[script]
local pair = TS.import(script, script.Parent, "include", "node_modules", "@rbxts", "jecs", "jecs").pair
local _ecs = TS.import(script, script.Parent, "ecs")
local A = _ecs.A
local B = _ecs.B
local world = _ecs.world
local query_1 = world:query(pair(A, B)):cached()
local archetypes_1 = query_1:archetypes()
local function system0()
	for _, archetype_1 in archetypes_1 do
		local entities_1 = archetype_1.entities
		for row_1 = #entities_1, 1, -1 or 1 do
			do
			end
		end
	end
end
return {
	system0 = system0,
}
"
`;

exports[`global world queries > should handle break statements 1`] = `
"-- Compiled with roblox-ts v3.0.0
local TS = _G[script]
local _ecs = TS.import(script, script.Parent, "ecs")
local A = _ecs.A
local B = _ecs.B
local world = _ecs.world
local query_1 = world:query(A, B):cached()
local archetypes_1 = query_1:archetypes()
local function system0()
	for _, archetype_1 in archetypes_1 do
		local entities_1 = archetype_1.entities
		local field_1 = archetype_1.columns_map
		local A_1 = field_1[A]
		local B_1 = field_1[B]
		local broken_1 = false
		for row_1 = #entities_1, 1, -1 or 1 do
			local e = entities_1[row_1]
			local a = A_1[row_1]
			local b = B_1[row_1]
			do
				if math.random() > 0.5 then
					broken_1 = true
					break
				end
			end
		end
		if broken_1 then
			break
		end
	end
end
return {
	system0 = system0,
}
"
`;

exports[`global world queries > should handle nested break statements 1`] = `
"-- Compiled with roblox-ts v3.0.0
local TS = _G[script]
local _ecs = TS.import(script, script.Parent, "ecs")
local A = _ecs.A
local B = _ecs.B
local C = _ecs.C
local world = _ecs.world
local query_1 = world:query(A, B, C):cached()
local archetypes_1 = query_1:archetypes()
local query_2 = world:query(A, B):cached()
local archetypes_2 = query_2:archetypes()
local function system0()
	for _, archetype_1 in archetypes_1 do
		local entities_1 = archetype_1.entities
		local broken_1 = false
		for row_1 = #entities_1, 1, -1 or 1 do
			local e1 = entities_1[row_1]
			do
				for _1, archetype_2 in archetypes_2 do
					local entities_2 = archetype_2.entities
					local broken_2 = false
					for row_2 = #entities_2, 1, -1 or 1 do
						local e2 = entities_2[row_2]
						do
							if math.random() > 0.5 then
								broken_2 = true
								break
							end
						end
					end
					if broken_2 then
						break
					end
				end
				if math.random() > 0.5 then
					broken_1 = true
					break
				end
			end
		end
		if broken_1 then
			break
		end
	end
end
return {
	system0 = system0,
}
"
`;

exports[`global world queries > should handle nested queries 1`] = `
"-- Compiled with roblox-ts v3.0.0
local TS = _G[script]
local _ecs = TS.import(script, script.Parent, "ecs")
local A = _ecs.A
local B = _ecs.B
local C = _ecs.C
local world = _ecs.world
local query_1 = world:query(A, B, C):cached()
local archetypes_1 = query_1:archetypes()
local query_2 = world:query(A, B):cached()
local archetypes_2 = query_2:archetypes()
local function system0()
	for _, archetype_1 in archetypes_1 do
		local entities_1 = archetype_1.entities
		for row_1 = #entities_1, 1, -1 or 1 do
			local e1 = entities_1[row_1]
			do
				for _1, archetype_2 in archetypes_2 do
					local entities_2 = archetype_2.entities
					for row_2 = #entities_2, 1, -1 or 1 do
						local e2 = entities_2[row_2]
						do
						end
					end
				end
			end
		end
	end
end
return {
	system0 = system0,
}
"
`;

exports[`global world queries > should not cache a non-static query 1`] = `
"-- Compiled with roblox-ts v3.0.0
local TS = _G[script]
local _ecs = TS.import(script, script.Parent, "ecs")
local A = _ecs.A
local B = _ecs.B
local C = _ecs.C
local world = _ecs.world
local function system0()
	local comps = if math.random() > 0.5 then { A, B } else { B, C }
	for _, archetype_1 in world:query(unpack(comps)):archetypes() do
		local entities_1 = archetype_1.entities
		for row_1 = #entities_1, 1, -1 or 1 do
			do
			end
		end
	end
end
return {
	system0 = system0,
}
"
`;

exports[`global world queries > should not cache an opted-out query 1`] = `
"-- Compiled with roblox-ts v3.0.0
local TS = _G[script]
local _ecs = TS.import(script, script.Parent, "ecs")
local A = _ecs.A
local B = _ecs.B
local world = _ecs.world
local function system0()
	for _, archetype_1 in world:query(A, B):archetypes() do
		local entities_1 = archetype_1.entities
		for row_1 = #entities_1, 1, -1 or 1 do
			do
			end
		end
	end
end
return {
	system0 = system0,
}
"
`;

exports[`global world queries > should optimize basic scoped query 1`] = `
"-- Compiled with roblox-ts v3.0.0
local TS = _G[script]
local _ecs = TS.import(script, script.Parent, "ecs")
local A = _ecs.A
local B = _ecs.B
local world = _ecs.world
local query_1 = world:query(A, B):cached()
local archetypes_1 = query_1:archetypes()
local function system0()
	for _, archetype_1 in archetypes_1 do
		local entities_1 = archetype_1.entities
		local field_1 = archetype_1.columns_map
		local A_1 = field_1[A]
		local B_1 = field_1[B]
		for row_1 = #entities_1, 1, -1 or 1 do
			local e = entities_1[row_1]
			local a = A_1[row_1]
			local b = B_1[row_1]
			do
			end
		end
	end
end
return {
	system0 = system0,
}
"
`;

exports[`global world queries > should optimize query with .with() modifier 1`] = `
"-- Compiled with roblox-ts v3.0.0
local TS = _G[script]
local _ecs = TS.import(script, script.Parent, "ecs")
local A = _ecs.A
local B = _ecs.B
local C = _ecs.C
local world = _ecs.world
local query_1 = world:query(A, B):with(C):cached()
local archetypes_1 = query_1:archetypes()
local function system0()
	for _, archetype_1 in archetypes_1 do
		local entities_1 = archetype_1.entities
		for row_1 = #entities_1, 1, -1 or 1 do
			local id = entities_1[row_1]
			do
			end
		end
	end
end
return {
	system0 = system0,
}
"
`;

exports[`global world queries > should optimize query with .without() modifier 1`] = `
"-- Compiled with roblox-ts v3.0.0
local TS = _G[script]
local _ecs = TS.import(script, script.Parent, "ecs")
local A = _ecs.A
local C = _ecs.C
local world = _ecs.world
local query_1 = world:query(A):without(C):cached()
local archetypes_1 = query_1:archetypes()
local function system0()
	for _, archetype_1 in archetypes_1 do
		local entities_1 = archetype_1.entities
		for row_1 = #entities_1, 1, -1 or 1 do
			local id = entities_1[row_1]
			do
			end
		end
	end
end
return {
	system0 = system0,
}
"
`;

exports[`global world queries > should optimize query with both modifiers 1`] = `
"-- Compiled with roblox-ts v3.0.0
local TS = _G[script]
local _ecs = TS.import(script, script.Parent, "ecs")
local A = _ecs.A
local B = _ecs.B
local C = _ecs.C
local world = _ecs.world
local query_1 = world:query(A):with(B):without(C):cached()
local archetypes_1 = query_1:archetypes()
local function system0()
	for _, archetype_1 in archetypes_1 do
		local entities_1 = archetype_1.entities
		for row_1 = #entities_1, 1, -1 or 1 do
			local id = entities_1[row_1]
			do
			end
		end
	end
end
return {
	system0 = system0,
}
"
`;

exports[`global world queries > should support 2 independent queries 1`] = `
"-- Compiled with roblox-ts v3.0.0
local TS = _G[script]
local _ecs = TS.import(script, script.Parent, "ecs")
local A = _ecs.A
local B = _ecs.B
local world = _ecs.world
local query_1 = world:query(A):cached()
local archetypes_1 = query_1:archetypes()
local query_2 = world:query(B):cached()
local archetypes_2 = query_2:archetypes()
local function system0()
	for _, archetype_1 in archetypes_1 do
		local entities_1 = archetype_1.entities
		for row_1 = #entities_1, 1, -1 or 1 do
			local e1 = entities_1[row_1]
			do
			end
		end
	end
	for _, archetype_2 in archetypes_2 do
		local entities_2 = archetype_2.entities
		for row_2 = #entities_2, 1, -1 or 1 do
			local e2 = entities_2[row_2]
			do
			end
		end
	end
end
return {
	system0 = system0,
}
"
`;

exports[`global world queries > should support 2 independent queries with modifiers 1`] = `
"-- Compiled with roblox-ts v3.0.0
local TS = _G[script]
local _ecs = TS.import(script, script.Parent, "ecs")
local A = _ecs.A
local B = _ecs.B
local C = _ecs.C
local world = _ecs.world
local query_1 = world:query(A):with(B):cached()
local archetypes_1 = query_1:archetypes()
local query_2 = world:query(B):without(C):cached()
local archetypes_2 = query_2:archetypes()
local function system0()
	for _, archetype_1 in archetypes_1 do
		local entities_1 = archetype_1.entities
		for row_1 = #entities_1, 1, -1 or 1 do
			local e1 = entities_1[row_1]
			do
			end
		end
	end
	for _, archetype_2 in archetypes_2 do
		local entities_2 = archetype_2.entities
		for row_2 = #entities_2, 1, -1 or 1 do
			local e2 = entities_2[row_2]
			do
			end
		end
	end
end
return {
	system0 = system0,
}
"
`;

exports[`global world queries > should support 2 systems with the same query 1`] = `
"-- Compiled with roblox-ts v3.0.0
local TS = _G[script]
local _ecs = TS.import(script, script.Parent, "ecs")
local A = _ecs.A
local B = _ecs.B
local world = _ecs.world
local query_1 = world:query(A, B):cached()
local archetypes_1 = query_1:archetypes()
local query_2 = world:query(A, B):cached()
local archetypes_2 = query_2:archetypes()
local function system0()
	for _, archetype_1 in archetypes_1 do
		local entities_1 = archetype_1.entities
		for row_1 = #entities_1, 1, -1 or 1 do
			local e1 = entities_1[row_1]
			do
			end
		end
	end
end
local function system1()
	for _, archetype_2 in archetypes_2 do
		local entities_2 = archetype_2.entities
		for row_2 = #entities_2, 1, -1 or 1 do
			local e2 = entities_2[row_2]
			do
			end
		end
	end
end
return {
	system0 = system0,
	system1 = system1,
}
"
`;

exports[`global world queries > should support table property access 1`] = `
"-- Compiled with roblox-ts v3.0.0
local TS = _G[script]
local _ecs = TS.import(script, script.Parent, "ecs")
local tbl = _ecs.tbl
local world = _ecs.world
local query_1 = world:query(tbl.E):cached()
local archetypes_1 = query_1:archetypes()
local function system0()
	for _, archetype_1 in archetypes_1 do
		local entities_1 = archetype_1.entities
		local field_1 = archetype_1.columns_map
		local _a = field_1[tbl.E]
		for row_1 = #entities_1, 1, -1 or 1 do
			local e = entities_1[row_1]
			local e2 = _a[row_1]
			do
			end
		end
	end
end
return {
	system0 = system0,
}
"
`;

exports[`global world queries > shouldn't cache a manually cached query 1`] = `
"-- Compiled with roblox-ts v3.0.0
local TS = _G[script]
local _ecs = TS.import(script, script.Parent, "ecs")
local A = _ecs.A
local B = _ecs.B
local world = _ecs.world
local function system0()
	for _, archetype_1 in world:query(A, B):cached():archetypes() do
		local entities_1 = archetype_1.entities
		for row_1 = #entities_1, 1, -1 or 1 do
			do
			end
		end
	end
end
return {
	system0 = system0,
}
"
`;

exports[`global world queries > shouldn't cache a manually cached query with modifiers 1`] = `
"-- Compiled with roblox-ts v3.0.0
local TS = _G[script]
local _ecs = TS.import(script, script.Parent, "ecs")
local A = _ecs.A
local B = _ecs.B
local C = _ecs.C
local world = _ecs.world
local function system0()
	for _, archetype_1 in world:query(A):with(B):without(C):cached():archetypes() do
		local entities_1 = archetype_1.entities
		for row_1 = #entities_1, 1, -1 or 1 do
			do
			end
		end
	end
end
return {
	system0 = system0,
}
"
`;

exports[`global world queries > shouldn't cache a query that is used outside a loop 1`] = `
"-- Compiled with roblox-ts v3.0.0
local TS = _G[script]
local _ecs = TS.import(script, script.Parent, "ecs")
local A = _ecs.A
local B = _ecs.B
local world = _ecs.world
local function system0()
	local q = world:query(A, B)
	for e in q do
	end
end
return {
	system0 = system0,
}
"
`;

exports[`non-transformable code > should not transform code without jecs queries 1`] = `
"-- Compiled with roblox-ts v3.0.0
local function add(a, b)
	return a + b
end
return {
	add = add,
}
"
`;

exports[`scoped world queries with destructuring parameter > should add world invalidation checks 1`] = `
"-- Compiled with roblox-ts v3.0.0
local TS = _G[script]
local _ecs = TS.import(script, script.Parent, "ecs")
local A = _ecs.A
local B = _ecs.B
local C = _ecs.C
local query_1
local archetypes_1
local worldKey_1
local query_2
local archetypes_2
local function system0(_param)
	local world = _param.world
	if worldKey_1 ~= world then
		worldKey_1 = world
		query_1 = world:query(A, B, C):cached()
		archetypes_1 = query_1:archetypes()
		query_2 = world:query(A, B):cached()
		archetypes_2 = query_2:archetypes()
	end
	for _, archetype_1 in archetypes_1 do
		local entities_1 = archetype_1.entities
		for row_1 = #entities_1, 1, -1 or 1 do
			local e1 = entities_1[row_1]
			do
				for _1, archetype_2 in archetypes_2 do
					local entities_2 = archetype_2.entities
					for row_2 = #entities_2, 1, -1 or 1 do
						local e2 = entities_2[row_2]
						do
						end
					end
				end
			end
		end
	end
end
return {
	system0 = system0,
}
"
`;

exports[`scoped world queries with destructuring parameter > should be able to use a component with an unnameable type 1`] = `
"-- Compiled with roblox-ts v3.0.0
local TS = _G[script]
local D = TS.import(script, script.Parent, "ecs").D
local query_1
local archetypes_1
local worldKey_1
local function system0(_param)
	local world = _param.world
	if worldKey_1 ~= world then
		worldKey_1 = world
		query_1 = world:query(D):cached()
		archetypes_1 = query_1:archetypes()
	end
	for _, archetype_1 in archetypes_1 do
		local entities_1 = archetype_1.entities
		local field_1 = archetype_1.columns_map
		local D_1 = field_1[D]
		for row_1 = #entities_1, 1, -1 or 1 do
			local e = entities_1[row_1]
			local d = D_1[row_1]
			do
			end
		end
	end
end
return {
	system0 = system0,
}
"
`;

exports[`scoped world queries with destructuring parameter > should be able to use pairs 1`] = `
"-- Compiled with roblox-ts v3.0.0
local TS = _G[script]
local pair = TS.import(script, script.Parent, "include", "node_modules", "@rbxts", "jecs", "jecs").pair
local _ecs = TS.import(script, script.Parent, "ecs")
local A = _ecs.A
local B = _ecs.B
local worldKey_1, query_1, archetypes_1
local function system0(_param)
	local world = _param.world
	if worldKey_1 ~= world then
		worldKey_1 = world
		query_1 = world:query(pair(A, B)):cached()
		archetypes_1 = query_1:archetypes()
	end
	for _, archetype_1 in archetypes_1 do
		local entities_1 = archetype_1.entities
		for row_1 = #entities_1, 1, -1 or 1 do
			do
			end
		end
	end
end
return {
	system0 = system0,
}
"
`;

exports[`scoped world queries with destructuring parameter > should handle break statements 1`] = `
"-- Compiled with roblox-ts v3.0.0
local TS = _G[script]
local _ecs = TS.import(script, script.Parent, "ecs")
local A = _ecs.A
local B = _ecs.B
local query_1
local archetypes_1
local worldKey_1
local function system0(_param)
	local world = _param.world
	if worldKey_1 ~= world then
		worldKey_1 = world
		query_1 = world:query(A, B):cached()
		archetypes_1 = query_1:archetypes()
	end
	for _, archetype_1 in archetypes_1 do
		local entities_1 = archetype_1.entities
		local field_1 = archetype_1.columns_map
		local A_1 = field_1[A]
		local B_1 = field_1[B]
		local broken_1 = false
		for row_1 = #entities_1, 1, -1 or 1 do
			local e = entities_1[row_1]
			local a = A_1[row_1]
			local b = B_1[row_1]
			do
				if math.random() > 0.5 then
					broken_1 = true
					break
				end
			end
		end
		if broken_1 then
			break
		end
	end
end
return {
	system0 = system0,
}
"
`;

exports[`scoped world queries with destructuring parameter > should handle nested break statements 1`] = `
"-- Compiled with roblox-ts v3.0.0
local TS = _G[script]
local _ecs = TS.import(script, script.Parent, "ecs")
local A = _ecs.A
local B = _ecs.B
local C = _ecs.C
local query_1
local archetypes_1
local worldKey_1
local query_2
local archetypes_2
local function system0(_param)
	local world = _param.world
	if worldKey_1 ~= world then
		worldKey_1 = world
		query_1 = world:query(A, B, C):cached()
		archetypes_1 = query_1:archetypes()
		query_2 = world:query(A, B):cached()
		archetypes_2 = query_2:archetypes()
	end
	for _, archetype_1 in archetypes_1 do
		local entities_1 = archetype_1.entities
		local broken_1 = false
		for row_1 = #entities_1, 1, -1 or 1 do
			local e1 = entities_1[row_1]
			do
				for _1, archetype_2 in archetypes_2 do
					local entities_2 = archetype_2.entities
					local broken_2 = false
					for row_2 = #entities_2, 1, -1 or 1 do
						local e2 = entities_2[row_2]
						do
							if math.random() > 0.5 then
								broken_2 = true
								break
							end
						end
					end
					if broken_2 then
						break
					end
				end
				if math.random() > 0.5 then
					broken_1 = true
					break
				end
			end
		end
		if broken_1 then
			break
		end
	end
end
return {
	system0 = system0,
}
"
`;

exports[`scoped world queries with destructuring parameter > should handle nested queries 1`] = `
"-- Compiled with roblox-ts v3.0.0
local TS = _G[script]
local _ecs = TS.import(script, script.Parent, "ecs")
local A = _ecs.A
local B = _ecs.B
local C = _ecs.C
local query_1
local archetypes_1
local worldKey_1
local query_2
local archetypes_2
local function system0(_param)
	local world = _param.world
	if worldKey_1 ~= world then
		worldKey_1 = world
		query_1 = world:query(A, B, C):cached()
		archetypes_1 = query_1:archetypes()
		query_2 = world:query(A, B):cached()
		archetypes_2 = query_2:archetypes()
	end
	for _, archetype_1 in archetypes_1 do
		local entities_1 = archetype_1.entities
		for row_1 = #entities_1, 1, -1 or 1 do
			local e1 = entities_1[row_1]
			do
				for _1, archetype_2 in archetypes_2 do
					local entities_2 = archetype_2.entities
					for row_2 = #entities_2, 1, -1 or 1 do
						local e2 = entities_2[row_2]
						do
						end
					end
				end
			end
		end
	end
end
return {
	system0 = system0,
}
"
`;

exports[`scoped world queries with destructuring parameter > should not cache a non-static query 1`] = `
"-- Compiled with roblox-ts v3.0.0
local TS = _G[script]
local _ecs = TS.import(script, script.Parent, "ecs")
local A = _ecs.A
local B = _ecs.B
local C = _ecs.C
local function system0(_param)
	local world = _param.world
	local comps = if math.random() > 0.5 then { A, B } else { B, C }
	for _, archetype_1 in world:query(unpack(comps)):archetypes() do
		local entities_1 = archetype_1.entities
		for row_1 = #entities_1, 1, -1 or 1 do
			do
			end
		end
	end
end
return {
	system0 = system0,
}
"
`;

exports[`scoped world queries with destructuring parameter > should not cache an opted-out query 1`] = `
"-- Compiled with roblox-ts v3.0.0
local TS = _G[script]
local _ecs = TS.import(script, script.Parent, "ecs")
local A = _ecs.A
local B = _ecs.B
local function system0(_param)
	local world = _param.world
	for _, archetype_1 in world:query(A, B):archetypes() do
		local entities_1 = archetype_1.entities
		for row_1 = #entities_1, 1, -1 or 1 do
			do
			end
		end
	end
end
return {
	system0 = system0,
}
"
`;

exports[`scoped world queries with destructuring parameter > should optimize basic scoped query 1`] = `
"-- Compiled with roblox-ts v3.0.0
local TS = _G[script]
local _ecs = TS.import(script, script.Parent, "ecs")
local A = _ecs.A
local B = _ecs.B
local query_1
local archetypes_1
local worldKey_1
local function system0(_param)
	local world = _param.world
	if worldKey_1 ~= world then
		worldKey_1 = world
		query_1 = world:query(A, B):cached()
		archetypes_1 = query_1:archetypes()
	end
	for _, archetype_1 in archetypes_1 do
		local entities_1 = archetype_1.entities
		local field_1 = archetype_1.columns_map
		local A_1 = field_1[A]
		local B_1 = field_1[B]
		for row_1 = #entities_1, 1, -1 or 1 do
			local e = entities_1[row_1]
			local a = A_1[row_1]
			local b = B_1[row_1]
			do
			end
		end
	end
end
return {
	system0 = system0,
}
"
`;

exports[`scoped world queries with destructuring parameter > should optimize query with .with() modifier 1`] = `
"-- Compiled with roblox-ts v3.0.0
local TS = _G[script]
local _ecs = TS.import(script, script.Parent, "ecs")
local A = _ecs.A
local B = _ecs.B
local C = _ecs.C
local query_1
local archetypes_1
local worldKey_1
local function system0(_param)
	local world = _param.world
	if worldKey_1 ~= world then
		worldKey_1 = world
		query_1 = world:query(A, B):with(C):cached()
		archetypes_1 = query_1:archetypes()
	end
	for _, archetype_1 in archetypes_1 do
		local entities_1 = archetype_1.entities
		for row_1 = #entities_1, 1, -1 or 1 do
			local id = entities_1[row_1]
			do
			end
		end
	end
end
return {
	system0 = system0,
}
"
`;

exports[`scoped world queries with destructuring parameter > should optimize query with .without() modifier 1`] = `
"-- Compiled with roblox-ts v3.0.0
local TS = _G[script]
local _ecs = TS.import(script, script.Parent, "ecs")
local A = _ecs.A
local C = _ecs.C
local query_1
local archetypes_1
local worldKey_1
local function system0(_param)
	local world = _param.world
	if worldKey_1 ~= world then
		worldKey_1 = world
		query_1 = world:query(A):without(C):cached()
		archetypes_1 = query_1:archetypes()
	end
	for _, archetype_1 in archetypes_1 do
		local entities_1 = archetype_1.entities
		for row_1 = #entities_1, 1, -1 or 1 do
			local id = entities_1[row_1]
			do
			end
		end
	end
end
return {
	system0 = system0,
}
"
`;

exports[`scoped world queries with destructuring parameter > should optimize query with both modifiers 1`] = `
"-- Compiled with roblox-ts v3.0.0
local TS = _G[script]
local _ecs = TS.import(script, script.Parent, "ecs")
local A = _ecs.A
local B = _ecs.B
local C = _ecs.C
local query_1
local archetypes_1
local worldKey_1
local function system0(_param)
	local world = _param.world
	if worldKey_1 ~= world then
		worldKey_1 = world
		query_1 = world:query(A):with(B):without(C):cached()
		archetypes_1 = query_1:archetypes()
	end
	for _, archetype_1 in archetypes_1 do
		local entities_1 = archetype_1.entities
		for row_1 = #entities_1, 1, -1 or 1 do
			local id = entities_1[row_1]
			do
			end
		end
	end
end
return {
	system0 = system0,
}
"
`;

exports[`scoped world queries with destructuring parameter > should support 2 independent queries 1`] = `
"-- Compiled with roblox-ts v3.0.0
local TS = _G[script]
local _ecs = TS.import(script, script.Parent, "ecs")
local A = _ecs.A
local B = _ecs.B
local query_1
local archetypes_1
local worldKey_1
local query_2
local archetypes_2
local function system0(_param)
	local world = _param.world
	if worldKey_1 ~= world then
		worldKey_1 = world
		query_1 = world:query(A):cached()
		archetypes_1 = query_1:archetypes()
		query_2 = world:query(B):cached()
		archetypes_2 = query_2:archetypes()
	end
	for _, archetype_1 in archetypes_1 do
		local entities_1 = archetype_1.entities
		for row_1 = #entities_1, 1, -1 or 1 do
			local e1 = entities_1[row_1]
			do
			end
		end
	end
	for _, archetype_2 in archetypes_2 do
		local entities_2 = archetype_2.entities
		for row_2 = #entities_2, 1, -1 or 1 do
			local e2 = entities_2[row_2]
			do
			end
		end
	end
end
return {
	system0 = system0,
}
"
`;

exports[`scoped world queries with destructuring parameter > should support 2 independent queries with modifiers 1`] = `
"-- Compiled with roblox-ts v3.0.0
local TS = _G[script]
local _ecs = TS.import(script, script.Parent, "ecs")
local A = _ecs.A
local B = _ecs.B
local C = _ecs.C
local query_1
local archetypes_1
local worldKey_1
local query_2
local archetypes_2
local function system0(_param)
	local world = _param.world
	if worldKey_1 ~= world then
		worldKey_1 = world
		query_1 = world:query(A):with(B):cached()
		archetypes_1 = query_1:archetypes()
		query_2 = world:query(B):without(C):cached()
		archetypes_2 = query_2:archetypes()
	end
	for _, archetype_1 in archetypes_1 do
		local entities_1 = archetype_1.entities
		for row_1 = #entities_1, 1, -1 or 1 do
			local e1 = entities_1[row_1]
			do
			end
		end
	end
	for _, archetype_2 in archetypes_2 do
		local entities_2 = archetype_2.entities
		for row_2 = #entities_2, 1, -1 or 1 do
			local e2 = entities_2[row_2]
			do
			end
		end
	end
end
return {
	system0 = system0,
}
"
`;

exports[`scoped world queries with destructuring parameter > should support 2 systems with the same query 1`] = `
"-- Compiled with roblox-ts v3.0.0
local TS = _G[script]
local _ecs = TS.import(script, script.Parent, "ecs")
local A = _ecs.A
local B = _ecs.B
local query_1
local archetypes_1
local worldKey_1
local query_2
local archetypes_2
local worldKey_2
local function system0(_param)
	local world = _param.world
	if worldKey_1 ~= world then
		worldKey_1 = world
		query_1 = world:query(A, B):cached()
		archetypes_1 = query_1:archetypes()
	end
	for _, archetype_1 in archetypes_1 do
		local entities_1 = archetype_1.entities
		for row_1 = #entities_1, 1, -1 or 1 do
			local e1 = entities_1[row_1]
			do
			end
		end
	end
end
local function system1(_param)
	local world = _param.world
	if worldKey_2 ~= world then
		worldKey_2 = world
		query_2 = world:query(A, B):cached()
		archetypes_2 = query_2:archetypes()
	end
	for _, archetype_2 in archetypes_2 do
		local entities_2 = archetype_2.entities
		for row_2 = #entities_2, 1, -1 or 1 do
			local e2 = entities_2[row_2]
			do
			end
		end
	end
end
return {
	system0 = system0,
	system1 = system1,
}
"
`;

exports[`scoped world queries with destructuring parameter > should support table property access 1`] = `
"-- Compiled with roblox-ts v3.0.0
local TS = _G[script]
local tbl = TS.import(script, script.Parent, "ecs").tbl
local query_1
local archetypes_1
local worldKey_1
local function system0(_param)
	local world = _param.world
	if worldKey_1 ~= world then
		worldKey_1 = world
		query_1 = world:query(tbl.E):cached()
		archetypes_1 = query_1:archetypes()
	end
	for _, archetype_1 in archetypes_1 do
		local entities_1 = archetype_1.entities
		local field_1 = archetype_1.columns_map
		local _a = field_1[tbl.E]
		for row_1 = #entities_1, 1, -1 or 1 do
			local e = entities_1[row_1]
			local e2 = _a[row_1]
			do
			end
		end
	end
end
return {
	system0 = system0,
}
"
`;

exports[`scoped world queries with destructuring parameter > shouldn't cache a manually cached query 1`] = `
"-- Compiled with roblox-ts v3.0.0
local TS = _G[script]
local _ecs = TS.import(script, script.Parent, "ecs")
local A = _ecs.A
local B = _ecs.B
local function system0(_param)
	local world = _param.world
	for _, archetype_1 in world:query(A, B):cached():archetypes() do
		local entities_1 = archetype_1.entities
		for row_1 = #entities_1, 1, -1 or 1 do
			do
			end
		end
	end
end
return {
	system0 = system0,
}
"
`;

exports[`scoped world queries with destructuring parameter > shouldn't cache a manually cached query with modifiers 1`] = `
"-- Compiled with roblox-ts v3.0.0
local TS = _G[script]
local _ecs = TS.import(script, script.Parent, "ecs")
local A = _ecs.A
local B = _ecs.B
local C = _ecs.C
local function system0(_param)
	local world = _param.world
	for _, archetype_1 in world:query(A):with(B):without(C):cached():archetypes() do
		local entities_1 = archetype_1.entities
		for row_1 = #entities_1, 1, -1 or 1 do
			do
			end
		end
	end
end
return {
	system0 = system0,
}
"
`;

exports[`scoped world queries with destructuring parameter > shouldn't cache a query that is used outside a loop 1`] = `
"-- Compiled with roblox-ts v3.0.0
local TS = _G[script]
local _ecs = TS.import(script, script.Parent, "ecs")
local A = _ecs.A
local B = _ecs.B
local function system0(_param)
	local world = _param.world
	local q = world:query(A, B)
	for e in q do
	end
end
return {
	system0 = system0,
}
"
`;

exports[`scoped world queries with destructuring statement > should add world invalidation checks 1`] = `
"-- Compiled with roblox-ts v3.0.0
local TS = _G[script]
local _ecs = TS.import(script, script.Parent, "ecs")
local A = _ecs.A
local B = _ecs.B
local C = _ecs.C
local query_1
local archetypes_1
local worldKey_1
local query_2
local archetypes_2
local function system0(info)
	local _binding = info
	local world = _binding.world
	if worldKey_1 ~= world then
		worldKey_1 = world
		query_1 = world:query(A, B, C):cached()
		archetypes_1 = query_1:archetypes()
		query_2 = world:query(A, B):cached()
		archetypes_2 = query_2:archetypes()
	end
	for _, archetype_1 in archetypes_1 do
		local entities_1 = archetype_1.entities
		for row_1 = #entities_1, 1, -1 or 1 do
			local e1 = entities_1[row_1]
			do
				for _1, archetype_2 in archetypes_2 do
					local entities_2 = archetype_2.entities
					for row_2 = #entities_2, 1, -1 or 1 do
						local e2 = entities_2[row_2]
						do
						end
					end
				end
			end
		end
	end
end
return {
	system0 = system0,
}
"
`;

exports[`scoped world queries with destructuring statement > should be able to use a component with an unnameable type 1`] = `
"-- Compiled with roblox-ts v3.0.0
local TS = _G[script]
local D = TS.import(script, script.Parent, "ecs").D
local query_1
local archetypes_1
local worldKey_1
local function system0(info)
	local _binding = info
	local world = _binding.world
	if worldKey_1 ~= world then
		worldKey_1 = world
		query_1 = world:query(D):cached()
		archetypes_1 = query_1:archetypes()
	end
	for _, archetype_1 in archetypes_1 do
		local entities_1 = archetype_1.entities
		local field_1 = archetype_1.columns_map
		local D_1 = field_1[D]
		for row_1 = #entities_1, 1, -1 or 1 do
			local e = entities_1[row_1]
			local d = D_1[row_1]
			do
			end
		end
	end
end
return {
	system0 = system0,
}
"
`;

exports[`scoped world queries with destructuring statement > should be able to use pairs 1`] = `
"-- Compiled with roblox-ts v3.0.0
local TS = _G[script]
local pair = TS.import(script, script.Parent, "include", "node_modules", "@rbxts", "jecs", "jecs").pair
local _ecs = TS.import(script, script.Parent, "ecs")
local A = _ecs.A
local B = _ecs.B
local worldKey_1, query_1, archetypes_1
local function system0(info)
	local _binding = info
	local world = _binding.world
	if worldKey_1 ~= world then
		worldKey_1 = world
		query_1 = world:query(pair(A, B)):cached()
		archetypes_1 = query_1:archetypes()
	end
	for _, archetype_1 in archetypes_1 do
		local entities_1 = archetype_1.entities
		for row_1 = #entities_1, 1, -1 or 1 do
			do
			end
		end
	end
end
return {
	system0 = system0,
}
"
`;

exports[`scoped world queries with destructuring statement > should handle break statements 1`] = `
"-- Compiled with roblox-ts v3.0.0
local TS = _G[script]
local _ecs = TS.import(script, script.Parent, "ecs")
local A = _ecs.A
local B = _ecs.B
local query_1
local archetypes_1
local worldKey_1
local function system0(info)
	local _binding = info
	local world = _binding.world
	if worldKey_1 ~= world then
		worldKey_1 = world
		query_1 = world:query(A, B):cached()
		archetypes_1 = query_1:archetypes()
	end
	for _, archetype_1 in archetypes_1 do
		local entities_1 = archetype_1.entities
		local field_1 = archetype_1.columns_map
		local A_1 = field_1[A]
		local B_1 = field_1[B]
		local broken_1 = false
		for row_1 = #entities_1, 1, -1 or 1 do
			local e = entities_1[row_1]
			local a = A_1[row_1]
			local b = B_1[row_1]
			do
				if math.random() > 0.5 then
					broken_1 = true
					break
				end
			end
		end
		if broken_1 then
			break
		end
	end
end
return {
	system0 = system0,
}
"
`;

exports[`scoped world queries with destructuring statement > should handle nested break statements 1`] = `
"-- Compiled with roblox-ts v3.0.0
local TS = _G[script]
local _ecs = TS.import(script, script.Parent, "ecs")
local A = _ecs.A
local B = _ecs.B
local C = _ecs.C
local query_1
local archetypes_1
local worldKey_1
local query_2
local archetypes_2
local function system0(info)
	local _binding = info
	local world = _binding.world
	if worldKey_1 ~= world then
		worldKey_1 = world
		query_1 = world:query(A, B, C):cached()
		archetypes_1 = query_1:archetypes()
		query_2 = world:query(A, B):cached()
		archetypes_2 = query_2:archetypes()
	end
	for _, archetype_1 in archetypes_1 do
		local entities_1 = archetype_1.entities
		local broken_1 = false
		for row_1 = #entities_1, 1, -1 or 1 do
			local e1 = entities_1[row_1]
			do
				for _1, archetype_2 in archetypes_2 do
					local entities_2 = archetype_2.entities
					local broken_2 = false
					for row_2 = #entities_2, 1, -1 or 1 do
						local e2 = entities_2[row_2]
						do
							if math.random() > 0.5 then
								broken_2 = true
								break
							end
						end
					end
					if broken_2 then
						break
					end
				end
				if math.random() > 0.5 then
					broken_1 = true
					break
				end
			end
		end
		if broken_1 then
			break
		end
	end
end
return {
	system0 = system0,
}
"
`;

exports[`scoped world queries with destructuring statement > should handle nested queries 1`] = `
"-- Compiled with roblox-ts v3.0.0
local TS = _G[script]
local _ecs = TS.import(script, script.Parent, "ecs")
local A = _ecs.A
local B = _ecs.B
local C = _ecs.C
local query_1
local archetypes_1
local worldKey_1
local query_2
local archetypes_2
local function system0(info)
	local _binding = info
	local world = _binding.world
	if worldKey_1 ~= world then
		worldKey_1 = world
		query_1 = world:query(A, B, C):cached()
		archetypes_1 = query_1:archetypes()
		query_2 = world:query(A, B):cached()
		archetypes_2 = query_2:archetypes()
	end
	for _, archetype_1 in archetypes_1 do
		local entities_1 = archetype_1.entities
		for row_1 = #entities_1, 1, -1 or 1 do
			local e1 = entities_1[row_1]
			do
				for _1, archetype_2 in archetypes_2 do
					local entities_2 = archetype_2.entities
					for row_2 = #entities_2, 1, -1 or 1 do
						local e2 = entities_2[row_2]
						do
						end
					end
				end
			end
		end
	end
end
return {
	system0 = system0,
}
"
`;

exports[`scoped world queries with destructuring statement > should not cache a non-static query 1`] = `
"-- Compiled with roblox-ts v3.0.0
local TS = _G[script]
local _ecs = TS.import(script, script.Parent, "ecs")
local A = _ecs.A
local B = _ecs.B
local C = _ecs.C
local function system0(info)
	local _binding = info
	local world = _binding.world
	local comps = if math.random() > 0.5 then { A, B } else { B, C }
	for _, archetype_1 in world:query(unpack(comps)):archetypes() do
		local entities_1 = archetype_1.entities
		for row_1 = #entities_1, 1, -1 or 1 do
			do
			end
		end
	end
end
return {
	system0 = system0,
}
"
`;

exports[`scoped world queries with destructuring statement > should not cache an opted-out query 1`] = `
"-- Compiled with roblox-ts v3.0.0
local TS = _G[script]
local _ecs = TS.import(script, script.Parent, "ecs")
local A = _ecs.A
local B = _ecs.B
local function system0(info)
	local _binding = info
	local world = _binding.world
	for _, archetype_1 in world:query(A, B):archetypes() do
		local entities_1 = archetype_1.entities
		for row_1 = #entities_1, 1, -1 or 1 do
			do
			end
		end
	end
end
return {
	system0 = system0,
}
"
`;

exports[`scoped world queries with destructuring statement > should optimize basic scoped query 1`] = `
"-- Compiled with roblox-ts v3.0.0
local TS = _G[script]
local _ecs = TS.import(script, script.Parent, "ecs")
local A = _ecs.A
local B = _ecs.B
local query_1
local archetypes_1
local worldKey_1
local function system0(info)
	local _binding = info
	local world = _binding.world
	if worldKey_1 ~= world then
		worldKey_1 = world
		query_1 = world:query(A, B):cached()
		archetypes_1 = query_1:archetypes()
	end
	for _, archetype_1 in archetypes_1 do
		local entities_1 = archetype_1.entities
		local field_1 = archetype_1.columns_map
		local A_1 = field_1[A]
		local B_1 = field_1[B]
		for row_1 = #entities_1, 1, -1 or 1 do
			local e = entities_1[row_1]
			local a = A_1[row_1]
			local b = B_1[row_1]
			do
			end
		end
	end
end
return {
	system0 = system0,
}
"
`;

exports[`scoped world queries with destructuring statement > should optimize query with .with() modifier 1`] = `
"-- Compiled with roblox-ts v3.0.0
local TS = _G[script]
local _ecs = TS.import(script, script.Parent, "ecs")
local A = _ecs.A
local B = _ecs.B
local C = _ecs.C
local query_1
local archetypes_1
local worldKey_1
local function system0(info)
	local _binding = info
	local world = _binding.world
	if worldKey_1 ~= world then
		worldKey_1 = world
		query_1 = world:query(A, B):with(C):cached()
		archetypes_1 = query_1:archetypes()
	end
	for _, archetype_1 in archetypes_1 do
		local entities_1 = archetype_1.entities
		for row_1 = #entities_1, 1, -1 or 1 do
			local id = entities_1[row_1]
			do
			end
		end
	end
end
return {
	system0 = system0,
}
"
`;

exports[`scoped world queries with destructuring statement > should optimize query with .without() modifier 1`] = `
"-- Compiled with roblox-ts v3.0.0
local TS = _G[script]
local _ecs = TS.import(script, script.Parent, "ecs")
local A = _ecs.A
local C = _ecs.C
local query_1
local archetypes_1
local worldKey_1
local function system0(info)
	local _binding = info
	local world = _binding.world
	if worldKey_1 ~= world then
		worldKey_1 = world
		query_1 = world:query(A):without(C):cached()
		archetypes_1 = query_1:archetypes()
	end
	for _, archetype_1 in archetypes_1 do
		local entities_1 = archetype_1.entities
		for row_1 = #entities_1, 1, -1 or 1 do
			local id = entities_1[row_1]
			do
			end
		end
	end
end
return {
	system0 = system0,
}
"
`;

exports[`scoped world queries with destructuring statement > should optimize query with both modifiers 1`] = `
"-- Compiled with roblox-ts v3.0.0
local TS = _G[script]
local _ecs = TS.import(script, script.Parent, "ecs")
local A = _ecs.A
local B = _ecs.B
local C = _ecs.C
local query_1
local archetypes_1
local worldKey_1
local function system0(info)
	local _binding = info
	local world = _binding.world
	if worldKey_1 ~= world then
		worldKey_1 = world
		query_1 = world:query(A):with(B):without(C):cached()
		archetypes_1 = query_1:archetypes()
	end
	for _, archetype_1 in archetypes_1 do
		local entities_1 = archetype_1.entities
		for row_1 = #entities_1, 1, -1 or 1 do
			local id = entities_1[row_1]
			do
			end
		end
	end
end
return {
	system0 = system0,
}
"
`;

exports[`scoped world queries with destructuring statement > should support 2 independent queries 1`] = `
"-- Compiled with roblox-ts v3.0.0
local TS = _G[script]
local _ecs = TS.import(script, script.Parent, "ecs")
local A = _ecs.A
local B = _ecs.B
local query_1
local archetypes_1
local worldKey_1
local query_2
local archetypes_2
local function system0(info)
	local _binding = info
	local world = _binding.world
	if worldKey_1 ~= world then
		worldKey_1 = world
		query_1 = world:query(A):cached()
		archetypes_1 = query_1:archetypes()
		query_2 = world:query(B):cached()
		archetypes_2 = query_2:archetypes()
	end
	for _, archetype_1 in archetypes_1 do
		local entities_1 = archetype_1.entities
		for row_1 = #entities_1, 1, -1 or 1 do
			local e1 = entities_1[row_1]
			do
			end
		end
	end
	for _, archetype_2 in archetypes_2 do
		local entities_2 = archetype_2.entities
		for row_2 = #entities_2, 1, -1 or 1 do
			local e2 = entities_2[row_2]
			do
			end
		end
	end
end
return {
	system0 = system0,
}
"
`;

exports[`scoped world queries with destructuring statement > should support 2 independent queries with modifiers 1`] = `
"-- Compiled with roblox-ts v3.0.0
local TS = _G[script]
local _ecs = TS.import(script, script.Parent, "ecs")
local A = _ecs.A
local B = _ecs.B
local C = _ecs.C
local query_1
local archetypes_1
local worldKey_1
local query_2
local archetypes_2
local function system0(info)
	local _binding = info
	local world = _binding.world
	if worldKey_1 ~= world then
		worldKey_1 = world
		query_1 = world:query(A):with(B):cached()
		archetypes_1 = query_1:archetypes()
		query_2 = world:query(B):without(C):cached()
		archetypes_2 = query_2:archetypes()
	end
	for _, archetype_1 in archetypes_1 do
		local entities_1 = archetype_1.entities
		for row_1 = #entities_1, 1, -1 or 1 do
			local e1 = entities_1[row_1]
			do
			end
		end
	end
	for _, archetype_2 in archetypes_2 do
		local entities_2 = archetype_2.entities
		for row_2 = #entities_2, 1, -1 or 1 do
			local e2 = entities_2[row_2]
			do
			end
		end
	end
end
return {
	system0 = system0,
}
"
`;

exports[`scoped world queries with destructuring statement > should support 2 systems with the same query 1`] = `
"-- Compiled with roblox-ts v3.0.0
local TS = _G[script]
local _ecs = TS.import(script, script.Parent, "ecs")
local A = _ecs.A
local B = _ecs.B
local query_1
local archetypes_1
local worldKey_1
local query_2
local archetypes_2
local worldKey_2
local function system0(info)
	local _binding = info
	local world = _binding.world
	if worldKey_1 ~= world then
		worldKey_1 = world
		query_1 = world:query(A, B):cached()
		archetypes_1 = query_1:archetypes()
	end
	for _, archetype_1 in archetypes_1 do
		local entities_1 = archetype_1.entities
		for row_1 = #entities_1, 1, -1 or 1 do
			local e1 = entities_1[row_1]
			do
			end
		end
	end
end
local function system1(info)
	local _binding = info
	local world = _binding.world
	if worldKey_2 ~= world then
		worldKey_2 = world
		query_2 = world:query(A, B):cached()
		archetypes_2 = query_2:archetypes()
	end
	for _, archetype_2 in archetypes_2 do
		local entities_2 = archetype_2.entities
		for row_2 = #entities_2, 1, -1 or 1 do
			local e2 = entities_2[row_2]
			do
			end
		end
	end
end
return {
	system0 = system0,
	system1 = system1,
}
"
`;

exports[`scoped world queries with destructuring statement > should support table property access 1`] = `
"-- Compiled with roblox-ts v3.0.0
local TS = _G[script]
local tbl = TS.import(script, script.Parent, "ecs").tbl
local query_1
local archetypes_1
local worldKey_1
local function system0(info)
	local _binding = info
	local world = _binding.world
	if worldKey_1 ~= world then
		worldKey_1 = world
		query_1 = world:query(tbl.E):cached()
		archetypes_1 = query_1:archetypes()
	end
	for _, archetype_1 in archetypes_1 do
		local entities_1 = archetype_1.entities
		local field_1 = archetype_1.columns_map
		local _a = field_1[tbl.E]
		for row_1 = #entities_1, 1, -1 or 1 do
			local e = entities_1[row_1]
			local e2 = _a[row_1]
			do
			end
		end
	end
end
return {
	system0 = system0,
}
"
`;

exports[`scoped world queries with destructuring statement > shouldn't cache a manually cached query 1`] = `
"-- Compiled with roblox-ts v3.0.0
local TS = _G[script]
local _ecs = TS.import(script, script.Parent, "ecs")
local A = _ecs.A
local B = _ecs.B
local function system0(info)
	local _binding = info
	local world = _binding.world
	for _, archetype_1 in world:query(A, B):cached():archetypes() do
		local entities_1 = archetype_1.entities
		for row_1 = #entities_1, 1, -1 or 1 do
			do
			end
		end
	end
end
return {
	system0 = system0,
}
"
`;

exports[`scoped world queries with destructuring statement > shouldn't cache a manually cached query with modifiers 1`] = `
"-- Compiled with roblox-ts v3.0.0
local TS = _G[script]
local _ecs = TS.import(script, script.Parent, "ecs")
local A = _ecs.A
local B = _ecs.B
local C = _ecs.C
local function system0(info)
	local _binding = info
	local world = _binding.world
	for _, archetype_1 in world:query(A):with(B):without(C):cached():archetypes() do
		local entities_1 = archetype_1.entities
		for row_1 = #entities_1, 1, -1 or 1 do
			do
			end
		end
	end
end
return {
	system0 = system0,
}
"
`;

exports[`scoped world queries with destructuring statement > shouldn't cache a query that is used outside a loop 1`] = `
"-- Compiled with roblox-ts v3.0.0
local TS = _G[script]
local _ecs = TS.import(script, script.Parent, "ecs")
local A = _ecs.A
local B = _ecs.B
local function system0(info)
	local _binding = info
	local world = _binding.world
	local q = world:query(A, B)
	for e in q do
	end
end
return {
	system0 = system0,
}
"
`;
